Updated yaml to add resources

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,8 @@
 project:
   type: book
-  output-dir: _sitet
-
+  output-dir: _site
+  resources:
+    - exercises/**
 
 book:
   title: "HUGEN 2073"
