--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 *.bigWig
 .DS_Store
+exercises/7_categorical_data_and_proportions/gtex_hallmark.csv
+exercises/7_categorical_data_and_proportions/gtex_hallmark.csv
